# smoc-api

./: -  .buildinfo  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  changelog-link.html  cli.html  demo1.cram.crai  development_guide.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog-link.doctree  cli.doctree  development_guide.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/modos/: index.doctree
.doctrees/intro/: background.doctree  quickstart.doctree
.doctrees/tutorials/: genomics_streaming.doctree  metabolomics_mztab.doctree  modo_access.doctree  modo_arrays.doctree  modo_provider.doctree  modo_remote.doctree  tutorials.doctree
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: docker-publish.yml  poetry-publish.yml  poetry-pytest.yml  poetry-test-publish.yml  sphinx-docs.yml
_modules/: index.html  modos.html
_modules/modos/: api.html  codes.html  io.html  prompt.html  rdf.html  remote.html  storage.html
_modules/modos/genomics/: cram.html  formats.html  htsget.html  region.html
_modules/modos/helpers/: schema.html
_modules/modos/metabolomics/: mztab.html
_sources/: cli.rst.txt  development_guide.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/modos/: index.rst.txt
_sources/intro/: quickstart.md.txt
_sources/tutorials/: genomics_streaming.md.txt  modo_access.md.txt  modo_arrays.md.txt  modo_provider.md.txt  modo_remote.md.txt  tutorials.md.txt
assets/: schema.ttl
autoapi/: index.html
autoapi/modos/: index.html
autoapi/modos/api/: index.html
autoapi/modos/codes/: index.html
autoapi/modos/genomics/: index.html
autoapi/modos/helpers/: index.html
autoapi/modos/io/: index.html
autoapi/modos/metabolomics/: index.html
autoapi/modos/prompt/: index.html
data/: calls1.bcf  calls1.bcf.csi  ex_config.yaml
data/ex/: demo1.cram  reference.fa  reference.fa.fai
data/ex1/: metadata.ttl
deploy/: .example.env  README.md  docker-compose.yml
deploy/fuzon/: Dockerfile  docker-entrypoint.sh
deploy/htsget/: Dockerfile  config.toml.template  docker-entrypoint.sh  s3_storage.toml
deploy/modo-server/: Dockerfile  server.py
deploy/modos-server/: Dockerfile  server.py
deploy/nginx/: default.conf  default.conf.template
docs/: cli.rst  conf.py  design-notes.md  development_guide.md  index.md  review-comments.md
docs/intro/: background.md  quickstart.md  remote.md  tutorials.md
docs/tutorials/: genomics_streaming.md  metabolomics_mztab.md  modo_access.md  modo_arrays.md  modo_provider.md  modo_remote.md  tutorials.md
intro/: background.html  quickstart.html
modo/: api.py  cli.py  cram.py  file_utils.py  helpers.py  helpers.py_bkup  introspection.py  io.py  meta.py  models.py  rdf.py  remote.py  storage.py
modos/: __init__.py  api.py  cli.py  codes.py  cram.py  file_utils.py  helpers.py  helpers.py_bkup  introspection.py  io.py  prompt.py  rdf.py  remote.py  storage.py
modos/genomics/: cram.py  formats.py  htsget.py  region.py
modos/helpers/: genomics.py  region.py  schema.py
modos/metabolomics/: mztab.py
nix/: flake.nix
tests/: conftest.py  test_api_local.py  test_api_remote.py  test_cli_local.py  test_modo.py  test_region.py
tutorials/: genomics_streaming.html  metabolomics_mztab.html  modo_access.html  modo_arrays.html  modo_provider.html  modo_remote.html  tutorials.html
(+60 files in other folders)
